--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: win-64
-argon2-cffi=20.1.0=py38h294d835_2
+argon2-cffi=20.1.0
 arrow=0.17.0=py38haa244fe_1
 async_generator=1.10=py_0
 attrs=20.3.0=pyhd3deb0d_0
