eliminar un tema

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,62 +3,62 @@
 # platform: win-64
 argon2-cffi == 20.1.0
 arrow==0.17.0=py38haa244fe_1
-async_generator=1.10=py_0
-attrs=20.3.0=pyhd3deb0d_0
-backcall=0.2.0=pyh9f0ad1d_0
-backports=1.0=py_2
-backports.functools_lru_cache=1.6.1=py_0
-binaryornot=0.4.4=py_1
-blas=1.0=mkl
-bleach=3.3.0=pyh44b312d_0
-brotli-python=1.0.9=py38h885f38d_4
-brotlipy=0.7.0=py38h294d835_1001
+async_generator==1.10=py_0
+attrs==20.3.0=pyhd3deb0d_0
+backcall==0.2.0=pyh9f0ad1d_0
+backports==1.0=py_2
+backports.functools_lru_cache==1.6.1=py_0
+binaryornot==0.4.4=py_1
+blas==1.0=mkl
+bleach==3.3.0=pyh44b312d_0
+brotli-python==1.0.9=py38h885f38d_4
+brotlipy==0.7.0=py38h294d835_1001
 ca-certificates=2020.12.5=h5b45459_0
-certifi=2020.12.5=py38haa244fe_1
-cffi=1.14.4=py38hd8c33c5_1
-chardet=4.0.0=py38haa244fe_1
-click=7.1.2=pyh9f0ad1d_0
-colorama=0.4.4=pyh9f0ad1d_0
-cookiecutter=1.7.2=pyh9f0ad1d_0
-cryptography=3.3.1=py38hd8c33c5_1
-cycler=0.10.0=py_2
-dash=1.19.0=pyhd8ed1ab_0
-dash-core-components=1.15.0=pyhd8ed1ab_0
-dash-html-components=1.1.2=pyh44b312d_0
-dash-renderer=1.9.0=pyhd8ed1ab_0
-dash-table=4.11.2=pyhd8ed1ab_0
-decorator=4.4.2=py_0
-defusedxml=0.6.0=py_0
-entrypoints=0.3=pyhd8ed1ab_1003
-flask=1.1.2=pyh9f0ad1d_0
-flask-compress=1.8.0=pyhd8ed1ab_0
-freetds=1.1.15=hcd4344a_0
-freetype=2.10.4=h546665d_1
-future=0.18.2=py38haa244fe_3
-glob2=0.7=py_0
-gunicorn=20.0.4=pypi_0
-icu=67.1=h33f27b4_0
-idna=2.10=pyh9f0ad1d_0
-importlib-metadata=3.4.0=py38haa244fe_0
-importlib_metadata=3.4.0=hd8ed1ab_0
-intel-openmp=2020.2=254
-ipykernel=5.4.3=py38hc5df569_0
-ipython=7.20.0=py38hc5df569_2
-ipython_genutils=0.2.0=py_1
-ipywidgets=7.6.3=pyhd3deb0d_0
-itsdangerous=1.1.0=py_0
-jedi=0.18.0=py38haa244fe_2
-jinja2=2.11.3=pyh44b312d_0
-jinja2-time=0.2.0=py_2
-joblib=1.0.0=pyhd8ed1ab_0
-jpeg=9d=h8ffe710_0
-jsonschema=3.2.0=py_2
-jupyter=1.0.0=py38haa244fe_6
-jupyter_client=6.1.11=pyhd8ed1ab_1
-jupyter_console=6.2.0=py_0
-jupyter_core=4.7.1=py38haa244fe_0
-jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
-jupyterlab_widgets=1.0.0=pyhd8ed1ab_1
+certifi==2020.12.5=py38haa244fe_1
+cffi==1.14.4=py38hd8c33c5_1
+chardet==4.0.0=py38haa244fe_1
+click==7.1.2=pyh9f0ad1d_0
+colorama==0.4.4=pyh9f0ad1d_0
+cookiecutter==1.7.2=pyh9f0ad1d_0
+cryptography==3.3.1=py38hd8c33c5_1
+cycler==0.10.0=py_2
+dash==1.19.0=pyhd8ed1ab_0
+dash-core-components==1.15.0=pyhd8ed1ab_0
+dash-html-components==1.1.2=pyh44b312d_0
+dash-renderer==1.9.0=pyhd8ed1ab_0
+dash-table==4.11.2=pyhd8ed1ab_0
+decorator==4.4.2=py_0
+defusedxml==0.6.0=py_0
+entrypoints==0.3=pyhd8ed1ab_1003
+flask==1.1.2=pyh9f0ad1d_0
+flask-compress==1.8.0=pyhd8ed1ab_0
+freetds==1.1.15=hcd4344a_0
+freetype==2.10.4=h546665d_1
+future==0.18.2=py38haa244fe_3
+glob2==0.7=py_0
+gunicorn==20.0.4=pypi_0
+icu==67.1=h33f27b4_0
+idna==2.10=pyh9f0ad1d_0
+importlib-metadata==3.4.0=py38haa244fe_0
+importlib_metadata==3.4.0=hd8ed1ab_0
+intel-openmp==2020.2=254
+ipykernel==5.4.3=py38hc5df569_0
+ipython==7.20.0=py38hc5df569_2
+ipython_genutils==0.2.0=py_1
+ipywidgets==7.6.3=pyhd3deb0d_0
+itsdangerous==1.1.0=py_0
+jedi==0.18.0=py38haa244fe_2
+jinja2==2.11.3=pyh44b312d_0
+jinja2-time==0.2.0=py_2
+joblib==1.0.0=pyhd8ed1ab_0
+jpeg==9d=h8ffe710_0
+jsonschema==3.2.0=py_2
+jupyter==1.0.0=py38haa244fe_6
+jupyter_client==6.1.11=pyhd8ed1ab_1
+jupyter_console==6.2.0=py_0
+jupyter_core==4.7.1=py38haa244fe_0
+jupyterlab_pygments==0.1.2=pyh9f0ad1d_0
+jupyterlab_widgets==1.0.0=pyhd8ed1ab_1
 kiwisolver=1.3.1=py38hbd9d945_1
 libblas=3.9.0=1_h8933c1f_netlib
 libcblas=3.9.0=3_hd5c7e75_netlib
